[tool.poetry]
name = "lida"
version = "0.1.0"
description = "LIDA: Automatic Generation of Visualizations from Data"
authors = ["Victor Dibia <victordibia@microsoft.com>"]

[tool.poetry.dependencies]
python = "3.10"
llmx = "0.0.15-alpha.0"
pydantic = "2.4.2"
uvicorn = "0.23.2"
fastapi = "0.103.2"
scipy = "1.10.0"
matplotlib = "3.8.0"
altair = "5.1.2"
seaborn = "0.12.0"
plotly = "5.17.0"
plotnine = "0.12.3"
statsmodels = "0.14.0"
networkx = "3.1"
geopandas = "0.14.0"
matplotlib-venn = "0.11.9"
wordcloud = "1.9.2"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
# optional-dependencies = {web = ["fastapi", "uvicorn"], transformers = ["llmx[transformers]"], tools=["geopy", "basemap", "basemap-data-hires"], infographics=["peacasso"]}

dynamic = ["version"]

[tool.setuptools]
include-package-data = true 

[tool.setuptools.dynamic]
version = {attr = "lida.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]  
include = ["lida*"]  
exclude = ["*.tests*"]  
namespaces = false  

[tool.setuptools.package-data]
"lida" = ["*.*"]

[project.urls]
"Homepage" = "https://github.com/microsoft/lida"
"Bug Tracker" = "https://github.com/microsoft/lida/issues"

[project.scripts]
lida = "lida.cli:run"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"